# GetMeAMovie

./: .gitignore  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api-ci.yml  api-deploy-production.yml  api-deploy-staging.yml  web-deploy-production.yml  web-deploy-staging.yml
Backend/: Dockerfile  README.md  pyproject.toml
Backend/app/: config.py  main.py
Backend/app/db/: aggregates.py  aggregates_utils.py  db.py  db_session.py
Backend/app/models/: movies.py  types.py  users.py
Backend/app/recommenders/: Recommender.py  make_predictions.py  make_predictions_hybrid.py
Backend/app/routers/: movies.py  recommendations.py  utils.py
Backend/tests/: conftest.py  test_main.py
Backend/tests/db/: test_aggregates.py
Data & ML/: CF_implementation.ipynb  Example encode similarity matrix in DB.ipynb  Example read similarity matrix rows from DB.ipynb  GBR100.joblib  README.md  Untitled.ipynb  baseline_model_opt1_implementationExp.ipynb  baseline_model_opt1_proposal.ipynb  baseline_model_opt2.ipynb  baseline_model_opt3_DLproposal.ipynb  config_prod.json  config_test.json  content_based_index.txt  content_based_similarity_matrix.py  directors.json  etl_get_actors.py  etl_get_certification.py  etl_get_platforms.py  etl_movies.py  etl_upload_db.py  example_input.json  example_output.json  hybrid_model.ipynb  hybrid_model_pred_tests.ipynb  make_predictions.py  make_predictions_hybrid.py  metaUsers.ipynb  movieIds_TO_USE.txt  predict_all_ratings.py  train_test_split.ipynb
Frontend/: package.json  tailwind.config.js
(+50 files in other folders)
