[tool.poetry]
name = "app"
version = "0.1.0"
description = "API of the Get Me A Movie project"
authors = ["Vladislav Nikolov <vladis890@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
pymongo = {extras = ["srv"], version = "^3.12.1"}
iso3166 = "^2.0.2"
pandas = "^1.3.4"
aiohttp = "^3.8.1"
scikit-learn = "0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
